--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> 
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>this is zxj github.pages</title>
+    <meta charset="utf-8" />
+    <title>个人简历</title>
+    <style>
+        .r {
+            margin-left: 30px;
+        }
+    </style>
 </head>
 <body>
-    <div class="github">
-        github I am coming!!
-    </div>
-</body>
+    <h1><strong><big><center>个人简历</center></big></strong></h1>
+    <h2><p>基本信息</p></h2>
+    <p><span class="r">姓名：周学佳</span>        <span class="r">年龄：21</span> </p>
+    <p><span class="r">性别：女</span>            <span class="r">籍贯：重庆</span></p>  
+    <p><span class="r">求职岗位：云计算</span>     <span class="r">电话：12345678910</span></p>
+    <p><span class="r">电子邮箱：123546@qq.com</span></p><br><hr/>
+    <h2><p>教育背景</p></h2>
+    <p><span class="r">于2019-09~2022-07就读重庆工程职业技术学院</span></p>
+    <p><span class="r">主修课程：python，Linux，Java，云计算导论，office高级应用，计算机组装与维护等</span></p><br><hr/>
+    <h2><p>技能特长</p></h2>
+    <p><span class="r">普通话二级证书，高新技术资格证熟练运用office等办公软件</span></p>
+     <!--<p><span style="padding-left: 20px;">普通话二级证书，高新技术资格证熟练运用office等办公软件</span></p>
+   文字之间的空格 使用style，两种方法，使用style块，行中单独使用-->
+   <!-- <dl>
+       <dt>技能</dt>
+       <dd>普通话二级证书，高新技术资格证熟练运用office等办公软件</dd>
+   </dl> -->
 </html>
