--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>个人简历</title>
+    <title>个人简历-周学佳</title>
     <style>
         body {
             background-color: #f1f1f1;
