--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="wrapper">
         <h1><strong><big><center>个人简历</center></big></strong></h1>
         <div class="block-1">  
-            <img class="avatar" src="1.jpg"width="100px",height="205"/>
+            <img class="avatar" src="./1.jpg"width="100px",height="205"/>
             <h2><p>基本信息</p></h2>
             <p><span class="r">姓名：周学佳</span>        <span class="r">年龄：21</span> </p>
             <p><span class="r">性别：女</span>            <span class="r">籍贯：重庆</span></p>  
